--- a/challenge/starter/assets/css/style.css
+++ b/challenge/starter/assets/css/style.css
@@ -15,12 +15,12 @@ body {
     color: #ffffff;
 }
 
-.header h1 {
+.header p {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+.header p .seo {
     color: #d9dcd6;
 }
 
@@ -101,17 +101,17 @@ p {
     color: #ffffff;
 }
 
-.benefit-lead h3 {
+.benefit-lead h1 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
+.benefit-brand h1 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-cost h3 {
+.benefit-cost h1 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -173,17 +173,17 @@ p {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+.search-engine-optimization h1 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
+.online-reputation-management h1 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.social-media-marketing h2 {
+.social-media-marketing h1 {
     margin-bottom: 20px;
     font-size: 36px;
 }
