--- a/challenge/starter/assets/css/style.css
+++ b/challenge/starter/assets/css/style.css
@@ -42,7 +42,7 @@ header nav ul {
 header nav ul li {
     display: inline-block;
     margin-left: 25px;
-}
+}6
 
 a {
     color: #ffffff;
@@ -60,6 +60,29 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+}
+
+article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+article img {
+    max-height: 200px;
+}
+
+article h1 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.social-media-marketing h1 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 .float-left {
@@ -137,59 +160,7 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h1 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h1 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h1 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
 .footer {
     padding: 30px;
