--- a/challenge/starter/assets/css/style.css
+++ b/challenge/starter/assets/css/style.css
@@ -96,7 +96,7 @@ article h1 {
     font-size: 36px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -107,55 +107,21 @@ article h1 {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefits {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h1 {
+aside h1 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h1 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h1 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-
 
 .footer {
     padding: 30px;
