div class footer updated to footer element; h2 headline in footer updated to p; differentiated as class headline from main p elements; css updated to link to changes; website tested and appearance remains unaffected.

--- a/challenge/starter/assets/css/style.css
+++ b/challenge/starter/assets/css/style.css
@@ -123,13 +123,13 @@ aside img {
     max-width: 150px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+.headline {
     font-size: 20px;
 }
